--- a/live/index.html
+++ b/live/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <!--链接样式-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="./index.css" />
     <!--设置标题-->
