--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
     <title>凯哔哩</title>
   </head>
   <body>
-    <div class="tab">
-      <ul>
-        <li tabIndex="0">搜索</li>
-        <li tabIndex="1" class="focus">热门</li>
-        <li tabIndex="2">关注</li>
-        <li tabIndex="3">直播</li>
-      </ul>
-    </div>
-    <div class="items">
-    <!--这里将会充满项目-->
-    </div>
-    <!--导航键-->
-    <footer id="softkeys">
-      <div id="softkey-left">刷新</div>
-      <div id="softkey-center">播放</div>
-      <div id="softkey-right">选项</div>
-    </footer>
+      <div class="tab">
+          <ul>
+              <li tabIndex="0">搜索</li>
+              <li tabIndex="1" class="focus">热门</li>
+              <li tabIndex="2">关注</li>
+              <li tabIndex="3">直播</li>
+          </ul>
+      </div>
+      <div class="items">
+          <!--这里将会充满项目-->
+      </div>
+      <div id="menu">
+          <ul id="menucontainer">
+              <li class="menuitem"> 菜单1 </li>
+          </ul>
+      </div>
+      <!--导航键-->
+      <footer id="softkeys">
+          <div id="softkey-left">刷新</div>
+          <div id="softkey-center">播放</div>
+          <div id="softkey-right">选项</div>
+      </footer>
   </body>
 </html>
 <!--链接JavaSript-->
